<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/password"
        android:textColor="#131313"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_username2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_username2"
        app:layout_constraintTop_toBottomOf="@+id/tv_username2" />

    <TextView
        android:id="@+id/tv_username2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/username"
        android:textColor="#0E0D0D"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/display_credentials"
        android:textColor="#121111"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_userId_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="TextView"
        android:textColor="#00897B"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_username2"
        app:layout_constraintStart_toEndOf="@+id/tv_username2"
        app:layout_constraintTop_toTopOf="@+id/tv_username2" />

    <TextView
        android:id="@+id/tv_password_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="#00897B"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/password_label"
        app:layout_constraintStart_toStartOf="@+id/tv_userId_display"
        app:layout_constraintTop_toTopOf="@+id/password_label" />

    <TextView
        android:id="@+id/description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/desc"
        android:textColor="#131313"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_description_display"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="@+id/password_label"
        app:layout_constraintTop_toBottomOf="@+id/password_label" />

    <TextView
        android:id="@+id/tv_description_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/description_label"
        app:layout_constraintStart_toStartOf="@+id/tv_password_display"
        app:layout_constraintTop_toTopOf="@+id/description_label" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/edit_floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_edit_24" />
</androidx.constraintlayout.widget.ConstraintLayout>