<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".AddCredentialFragment"
    android:fitsSystemWindows="false">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_credentials"
        android:textColor="#0C0C0C"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/username"
        android:textColor="#0E0D0D"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/password"
        android:textColor="#131313"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tv_username"
        app:layout_constraintTop_toBottomOf="@+id/tv_username" />

    <EditText
        android:id="@+id/et_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_pwd"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.388" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/desc"
        android:textColor="#151414"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_confirm_pwd"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="@+id/tv_confirm_pwd"
        app:layout_constraintTop_toBottomOf="@+id/tv_confirm_pwd" />

    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/tv_password"
        app:layout_constraintEnd_toEndOf="@+id/et_username"
        app:layout_constraintStart_toStartOf="@+id/et_username"
        app:layout_constraintTop_toTopOf="@+id/tv_password"
        app:layout_constraintVertical_bias="0.461" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/enter_username"
        android:textColor="#111BEF"
        app:layout_constraintBottom_toBottomOf="@+id/tv_username"
        app:layout_constraintStart_toEndOf="@+id/tv_username"
        app:layout_constraintTop_toTopOf="@+id/tv_username" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginBottom="56dp"
        android:clickable="true"
        android:src="@drawable/ic_done_black_24dp"
        app:backgroundTint="#00897B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView6" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:clickable="true"
        android:src="@drawable/ic_refresh_black_24dp"
        app:backgroundTint="#F6760E"
        app:layout_constraintBottom_toBottomOf="@+id/fab_save"
        app:layout_constraintStart_toEndOf="@+id/fab_save"
        app:layout_constraintTop_toTopOf="@+id/fab_save"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:clickable="true"

        android:src="@drawable/ic_clear_black_24dp"
        app:backgroundTint="#F11313"
        app:layout_constraintBottom_toBottomOf="@+id/fab_reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fab_reset"
        app:layout_constraintTop_toTopOf="@+id/fab_reset"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_confirm_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="Confirm Password"
        android:textColor="#0E0E0E"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_password"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="@+id/tv_password"
        app:layout_constraintTop_toBottomOf="@+id/tv_password" />

    <EditText
        android:id="@+id/et_confirmpwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Re-enter Password"
        app:layout_constraintBottom_toBottomOf="@+id/tv_confirm_pwd"
        app:layout_constraintEnd_toEndOf="@+id/et_pwd"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/et_pwd"
        app:layout_constraintTop_toTopOf="@+id/tv_confirm_pwd" />

</androidx.constraintlayout.widget.ConstraintLayout>